--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 			</ul>
 		</div>
 	</li> -->
-</ul>
-<ul id="col-1" class="col col-right">
+</ul><ul id="col-1" class="col col-right">
 <!-- 	<li class="list">
 		<div class="accordion">
 		<h2 class="list-title">Things I Want</h2>
