--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 <body>
 
+
+<div class="btns-primary">
+	<div class="btn btn-prev-date">&#8592; Yesterday</div>
+	<div class="btn btn-next-date">Tomorrow &#8594;</div>
+	<div class="btn new-item">New Category</div>
+	<div class="btn trash"></div>
+</div>
+
 <h1 class="page-title">Attention! Your Daily Scheduler</h1>
 
 <ul id="col-0" class="col col-left">
@@ -50,11 +58,6 @@
 		</div>
 	</li> -->
 </ul>
-
-<div class="btns-primary">
-	<div class="btn-primary new-item">+</div>
-	<div class="btn-primary trash"></div>
-</div>
 
 <div id="delete-list-or-children" title="Delete List or Children?" style="display:none;">
   <p>Do you wish to delete the entire list, or just the children?</p>
